Fix spacing issues

--- a/src/components/pages/ExperiencePage/EmployerItem/EmployerItem.scss
+++ b/src/components/pages/ExperiencePage/EmployerItem/EmployerItem.scss
@@ -33,6 +33,7 @@
 
     ul {
         margin-bottom: 0;
+        padding-left: 1rem;
     }
 
     .rk-employer-image {
